# SurVIndel2

./: CMakeLists.txt  Dockerfile  README.md  build_htslib.sh  clip_consensus_builder.cpp  consensus.h  dp_clusterer.cpp  extend_1sr_consensus.h  features.py  hsr.h  merge_identical_calls.cpp  normalise.cpp  reads_categorizer.cpp  remapping.h  run_classifier.py  sam_utils.h  simd_macros.h  stat_tests.h  survindel2.py  train_classifier.py  utils.h
demo/: reads.bam  reads.bam.bai  ref.fa  ref.fa.fai
libs/: kdtree.c
